--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,14 @@ ENV/
 
 # vscode
 .vscode/
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea
+
+# CMake
+cmake-build-debug/
+cmake-build-release/
+
+## File-based project format:
+*.iws
