--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+attrs==17.4.0
 certifi==2018.1.18
 chardet==3.0.4
 idna==2.6
+pluggy==0.6.0
+py==1.5.2
+pycodestyle==2.3.1
+pytest==3.4.1
 requests==2.18.4
+six==1.11.0
+tox==2.9.1
 urllib3==1.22
+virtualenv==15.1.0
