added pep8 test

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,18 @@ envlist =
     py34
     py35
     py36
+    pep8
+
 [testenv]
 deps=
     pytest
 setenv=
     PYTHONWARNINGS=all
 commands=pytest
+
+[testenv:pep8]
+deps=
+    {[testenv]deps}
+    pytest-pep8
+commands=
+    py.test --pep8 -m pep8
