Test working authentication

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,11 @@ envlist =
     pep8
 
 [testenv]
+passenv=
+    PYQ_CLIENT_ID
+    PYQ_CLIENT_SECRET
+    PYQ_EMAIL
+    PYQ_PASSWORD
 deps=
     pytest
 setenv=
