--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ license = MIT
 [options]
 packages = find:
 install_requires = requests
+tests_require = tox
 
 [tool:pytest]
 pep8maxlinelength = 120
