Tested interactive authentication

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,12 @@ setenv=
     PYTHONWARNINGS=all
 commands=pytest
 
+
+[testenv:py27]
+deps=
+    {[testenv]deps}
+    mock
+
 [testenv:pep8]
 deps=
     {[testenv]deps}
