--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,8 @@ license = MIT
 packages = find:
 install_requires = requests
 tests_require = tox
+scripts = pyq/pyq.py
+
 
 [tool:pytest]
 pep8maxlinelength = 120
