made entry point work via tragic workaround

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,9 @@ license = MIT
 packages = find:
 install_requires = requests
 tests_require = tox
-scripts = pyq/pyq.py
+
+[options.packages.find]
+exclude = test
 
 
 [tool:pytest]
