--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ matrix:
       env: TOXENV=py36
     - python: 3.6
       env: TOXENV=pep8
+    - python: 3.6
+      script: pyq _test
+      install: pip install .
